--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,92 +1,31 @@
+
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory  PAYASADAS Sof the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@misc{gharaee2024bioscan5m,
+    title={BIOSCAN-5M: A Multimodal Dataset for Insect Biodiversity},
+    author={Zahra Gharaee and Scott C. Lowe and ZeMing Gong and Pablo Millan Arias and Nicholas Pellegrino and Austin T. Wang and Joakim Bruslund Haurum and Iuliia Zarubiieva and Lila Kari and Dirk Steinke and Graham W. Taylor and Paul Fieguth and Angel X. Chang},
+    year={2024},
+    eprint={2406.12723},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG},
+    abbr={Arxiv},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-@article {DeLUCS,
-	author = {Millan  Arias, Pablo and Alipour, Fatemeh and Hill, Kathleen A. and Kari, Lila},
-	bibtex_show={true},
-	abbr={Genomics},
-	title = {DeLUCS: Deep Learning for Unsupervised Clustering of DNA Sequences},
-	elocation-id = {2021.05.13.444008},
-	year = {2021},
-	doi = {10.1101/2021.05.13.444008},
-	html={https://www.biorxiv.org/content/10.1101/2021.05.13.444008v2},
-	publisher = {Cold Spring Harbor Laboratory},
-	journal = {bioRxiv}
+@inproceedings{arias2023barcodebert,
+      title={BarcodeBERT: Transformers for Biodiversity Analysis}, 
+      author={Pablo A. Millan~Arias and Niousha Sadjadi and Monireh Safari and ZeMing Gong and Austin T. Wang and Scott C. Lowe and Joakim Bruslund Haurum and Iuliia Zarubiieva and Dirk Steinke and Lila Kari and Angel X. Chang and Graham W. Taylor},
+      maintitle = {37th Conference on Neural Information Processing Systems (NeurIPS 2023)},
+      booktitle = {4th Workshop on Self-supervised Learning: Theory and Practice},
+      year={2023},
+      eprint={2311.02401},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      abbr={Arxiv},
 }
 
 @inproceedings{8527471,
-author={ Millan Arias, Pablo A. and Quiroga Sepulveda, Julian A.},
-bibtex_show={true},
-abbr={CV},
+author={P. A. {Millan Arias} and J. A. {Quiroga Sepulveda}},
 booktitle={2018 IEEE First International Conference on Artificial Intelligence and Knowledge Engineering (AIKE)},
 title={Deep Learned vs. Hand-Crafted Features for Action Classification},
 year={2018},
@@ -95,8 +34,68 @@ number={},
 pages={170-171},
 keywords={feature extraction;image classification;learning (artificial intelligence);video signal processing;hand-crafted features;action classification;deep learned features;hand-crafted ones;feature extractor;image recognition;video activity classification tasks;Feature extraction;Videos;Hardware;Task analysis;Image recognition;Trajectory;Computer architecture;Action Recognition;Hand-Crafted features;Deep Learned features},
 doi={10.1109/AIKE.2018.00039},
-html = {https://ieeexplore.ieee.org/document/8527471},
 ISSN={null},
-month={Sep.}
+month={Sep.},
+abbr={IEEE}
 }
 
+
+
+@article {DeLUCS,
+	author = {Millán Arias, Pablo and Alipour Fatemeh and Hill, Kathleen Allen and Kari, Lila},
+	title = {DeLUCS: Deep Learning for Unsupervised Clustering of DNA Sequences},
+	elocation-id = {2021.05.13.444008},
+	year = {2022},
+	doi = {10.1371/journal.pone.0261531},
+	publisher = {Cold Spring Harbor Laboratory},
+	journal = {PLoS ONE},
+	volume={17(1)},
+	pages={e0261531},
+  selected={true},
+  html={https://doi.org/10.1371/journal.pone.0261531},
+  google_scholar_id={u-x6o8ySG0sC},
+  pdf={DeLUCS.pdf},
+  abbr={PLoS}
+}
+
+
+@article{idelucs,
+    author = {Millan Arias, Pablo and Hill, Kathleen A and Kari, Lila},
+    title = "{iDeLUCS: a deep learning interactive tool for alignment-free clustering of DNA sequences}",
+    journal = {Bioinformatics},
+    volume = {39},
+    number = {9},
+    pages = {btad508},
+    year = {2023},
+    month = {08},
+    issn = {1367-4811},
+    doi = {10.1093/bioinformatics/btad508},
+    abbr = {Bioinformatics},
+    preview={IIC_animation.gif}
+}
+
+@Article{Arias2023,
+author={Mill{\'a}n~Arias, Pablo 
+and Butler, Joseph
+and Randhawa, Gurjit S.
+and Soltysiak, Maximillian P. M.
+and Hill, Kathleen A.
+and Kari, Lila},
+title={Environment and taxonomy shape the genomic signature of prokaryotic extremophiles},
+journal={Scientific Reports},
+year={2023},
+month={Sep},
+day={26},
+volume={13},
+number={1},
+pages={16105},
+issn={2045-2322},
+doi={10.1038/s41598-023-42518-y},
+html={https://doi.org/10.1038/s41598-023-42518-y},
+altmetric={37752120},
+dimensions={true},
+google_scholar_id={2osOgNQ5qMEC},
+pdf={Extremophiles_.pdf},
+selected={true},
+abbr = {Sci. Rep.}
+}
