CS482 broken link

--- a/_pages/CS482.md
+++ b/_pages/CS482.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Computational Techniques in Biological Sequence Analysis
-permalink: /courses/cs482
+permalink: /cs482
 ---
 
 
