Updated Schedule/ Include Slides

--- a/_pages/CS482.md
+++ b/_pages/CS482.md
@@ -48,7 +48,7 @@ The main aims of the class are for each student to:
 - Bioinformatics Algorithms: An Active Learning Approach (3rd Edition) (2018) by Phillip Compeau and Pavel Pevzner
   
 
-**Grading Scheme:** Programming Assignment: 50% (15% x 4), Midterm Evaluation (20%), Final exam: 40%.  
+**Grading Scheme:** Programming Assignment: 50% (12.5% x 4), Midterm Evaluation: 20%, Final exam: 30%.  
 
 **Programming Assignments:** The students are expected to complete the assignments on their own. For each assignment, the source code and the assignment report will be reviewed and graded by the TA. The source code should be readable, runnable, and pass the tests. The project report should be detailed enough for the TA to run the code and expected to have the following sections: introduction, implementation details, results, and discussion.**The students are expected to program in Python for programming assignments**.
 	
@@ -63,37 +63,37 @@ COVID-19 policy: Please refer to the UWaterloo Coronavirus website for updated a
 
 This is a **tentative** class schedule and may be adjusted as the term progresses
 
-| Lecture                   | Date   | Topic                                                       |
-| ------------------------- | ------ | ----------------------------------------------------------- |
-| L01                       | Jan 6  | Course Overview and Logistics                               |
-| L02                       | Jan 8  | A primer in Computational Biology                           |
-| L03                       | Jan 13 | Sequence Alignment                                          |
-| L04                       | Jan 15 | Sequence Database search                                    |
-| L05                       | Jan 20 | Sequence Database search / Multiple Sequence Alignment      |
-| L06                       | Jan 22 | Phylogeny                                                   |
-| \*Assignment 1 due Jan 23 |
-| L07                       | Jan 27 | Genome assembly and mapping                                 |
-| L08                       | Jan 29 |                                                             |
-| L09                       | Feb 3  | Foundations in Deep Learning: Neural Nets, CNN, Autoencoder |
-| L10                       | Feb 5  | Alignment free methods Deep Learning in Genomics            |
-| L11                       | Feb 10 |                                                             |
-|                           | Feb 12 | Miterm Exam (No Lecture)                                    |
-| Reading Week              | Feb 17 |                                                             |
-|                           | Feb 19 |                                                             |
-| L12                       | Feb 24 | Genome Annotation                                           |
-| L13                       | Feb 26 |                                                             |
+| Lecture                   | Date   | Topic                                                       | Slides |
+| ------------------------- | ------ | ----------------------------------------------------------- |--------|
+| L01                       | Jan 6  | Course Overview and Logistics                               ||
+| L02                       | Jan 8  | A primer in Computational Biology                           |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5875262/View)|
+| L03                       | Jan 13 | Sequence Alignment                                          |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882089/View)|
+| L04                       | Jan 15 | Sequence Database search                                    |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882090/View)|
+| L05                       | Jan 20 | Sequence Database search / Multiple Sequence Alignment      |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882091/View)|
+| L06                       | Jan 22 | Phylogeny                                                   |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882092/View)|
+| \*Assignment 1 due Jan 24 |
+| L07                       | Jan 27 | Genome assembly and mapping                                 |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882093/View)|
+| L08                       | Jan 29 |                                                             ||
+| L09                       | Feb 3  | Foundations in Deep Learning: Neural Nets, CNN, Autoencoder |[pdf]()|
+| L10                       | Feb 5  | Alignment free methods Deep Learning in Genomics            |[pdf]()|
+| L11                       | Feb 10 |                                                             ||
+|                           | Feb 12 | Miterm Exam (No Lecture)                                    |[pdf]()|
+| Reading Week              | Feb 17 |                                                             ||
+|                           | Feb 19 |                                                             ||
+| L12                       | Feb 24 | Genome Annotation                                           |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882094/View)|
+| L13                       | Feb 26 |                                                             ||
 | \*Assignment 2 due Feb 28 |
-| L14                       | Mar 3  | RNA-Sequencing & Gene Expression                            |
-| L15                       | Mar 5  |                                                             |
-| L16                       | Mar 10 | RNA & protein structure prediction                          |
-| L17                       | Mar 12 |                                                             |
+| L14                       | Mar 3  | RNA-Sequencing & Gene Expression                            |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882095/View)|
+| L15                       | Mar 5  |                                                             ||
+| L16                       | Mar 10 |Proteomics and Mass Spectrometry                             |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882096/View)| 
+| L17                       | Mar 12 |                                                             ||
 | \*Assignment 3 due Mar 15 |
-| L18                       | Mar 17 | Proteomics and Mass Spectrometry                            |
-| L19                       | Mar 19 |                                                             |
-| L20                       | Mar 24 | Single-cell genomics                                        |
-| L21                       | Mar 26 |                                                             |
-| L22                       | Mar 31 | Foundations in Deep Learning: Transformer Models            |
-| L23                       | Apr 2  | DNA Language Models                                         |
+| L18                       | Mar 17 | RNA & protein structure prediction                          |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882097/View)|
+| L19                       | Mar 19 |                                                             ||
+| L20                       | Mar 24 | Single-cell genomics                                        |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882098/View)|
+| L21                       | Mar 26 |                                                             ||
+| L22                       | Mar 31 | Foundations in Deep Learning: Transformer Models            |[pdf]()|
+| L23                       | Apr 2  | DNA Language Models                                         |[pdf]()|
 | \*Assignment 4 due Apr 4  |
 
 
