Updated Schedule/ Include Slides

--- a/_pages/CS482.md
+++ b/_pages/CS482.md
@@ -9,8 +9,8 @@ permalink: /cs482/
 **Location:** MC 1056  
 **Instructor:** Dr. Pablo Millan Arias   
                 Email: pmillana[at]uwaterloo[dot]ca  
-                Office: DC 3620 
-                Office hours: Tue 4:00 pm – 5:00 pm or by appointment  
+                Office: DC 3620  
+                Office hours: ~~Tue~~ Fri 4:00 pm – 5:00 pm or by appointment  
 
 **Teaching assistants:** 
   - Michael Wrana  
@@ -67,11 +67,11 @@ This is a **tentative** class schedule and may be adjusted as the term progresse
 | ------------------------- | ------ | ----------------------------------------------------------- |--------|
 | L01                       | Jan 6  | Course Overview and Logistics                               ||
 | L02                       | Jan 8  | A primer in Computational Biology                           |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5875262/View)|
-| L03                       | Jan 13 | Sequence Alignment                                          |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882089/View)|
+| L03                       | Jan 13 | Sequence Alignment                                          |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882089/View) (Jan 14)| 
 | L04                       | Jan 15 | Sequence Database search                                    |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882090/View)|
 | L05                       | Jan 20 | Sequence Database search / Multiple Sequence Alignment      |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882091/View)|
 | L06                       | Jan 22 | Phylogeny                                                   |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882092/View)|
-| \*Assignment 1 due Jan 24 |
+| \*[Assignment 1](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5883633/View) due Jan 24 |
 | L07                       | Jan 27 | Genome assembly and mapping                                 |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882093/View)|
 | L08                       | Jan 29 |                                                             ||
 | L09                       | Feb 3  | Foundations in Deep Learning: Neural Nets, CNN, Autoencoder |[pdf]()|
