update schedule and slides

--- a/_pages/CS482.md
+++ b/_pages/CS482.md
@@ -67,13 +67,13 @@ This is a **tentative** class schedule and may be adjusted as the term progresse
 | ------------------------- | ------ | ----------------------------------------------------------- |--------|
 | L01                       | Jan 6  | Course Overview and Logistics                               ||
 | L02                       | Jan 8  | A primer in Computational Biology                           |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5875262/View)|
-| L03                       | Jan 13 | Sequence Alignment                                          |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882089/View) (Jan 14)| 
-| L04                       | Jan 15 | Sequence Database search                                    |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882090/View)|
-| L05                       | Jan 20 | Sequence Database search / Multiple Sequence Alignment      |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882091/View)|
-| L06                       | Jan 22 | Phylogeny                                                   |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882092/View)|
+| L03                       | Jan 13 | Sequence Alignment                                          |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882089/View) (Jan 20)| 
+| L04                       | Jan 15 | Sequence Database search                                    |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882090/View) (Jan 20)|
+| L05                       | Jan 20 | Probabilistic interpretarion of score/ Introduction to AF methods      ||
+| L06                       | Jan 22 | Multiple Sequence alignment/Phylogeny                                                   |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882091/View) (Jan 20)|
 | \*[Assignment 1](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5883633/View) due Jan 24 |
-| L07                       | Jan 27 | Genome assembly and mapping                                 |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882093/View)|
-| L08                       | Jan 29 |                                                             ||
+| L07                       | Jan 27 | Phylogeny                                                            |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882092/View)|
+| L08                       | Jan 29 | Genome assembly and mapping                                                             |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882093/View)|
 | L09                       | Feb 3  | Foundations in Deep Learning: Neural Nets, CNN, Autoencoder |[pdf]()|
 | L10                       | Feb 5  | Alignment free methods Deep Learning in Genomics            |[pdf]()|
 | L11                       | Feb 10 |                                                             ||
