--- a/_pages/CS482.md
+++ b/_pages/CS482.md
@@ -68,32 +68,32 @@ This is a **tentative** class schedule and may be adjusted as the term progresse
 | L01                       | Jan 6  | Course Overview and Logistics                               ||
 | L02                       | Jan 8  | A primer in Computational Biology                           |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5875262/View)|
 | L03                       | Jan 13 | Sequence Alignment                                          |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882089/View) (Jan 20)| 
-| L04                       | Jan 15 | Sequence Database search                                    |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882090/View) (Jan 20)|
+| L04                       | Jan 15 | Sequence Database search                                    |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882090/View) (Jan 22)|
 | L05                       | Jan 20 | Probabilistic interpretarion of score/ Introduction to AF methods      ||
-| L06                       | Jan 22 | Multiple Sequence alignment/Phylogeny                                                   |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882091/View) (Jan 20)|
+| L06                       | Jan 22 | Multiple Sequence alignment/Phylogeny                                                   |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882091/View) (Jan 24)|
 | \*[Assignment 1](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5883633/View) due Jan 24 |
-| L07                       | Jan 27 | Phylogeny                                                            |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882092/View)|
-| L08                       | Jan 29 | Genome assembly and mapping                                                             |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882093/View)|
-| L09                       | Feb 3  | Foundations in Deep Learning: Neural Nets, CNN, Autoencoder |[pdf]()|
-| L10                       | Feb 5  | Alignment free methods Deep Learning in Genomics            |[pdf]()|
-| L11                       | Feb 10 |                                                             ||
-|                           | Feb 12 | Miterm Exam (No Lecture)                                    |[pdf]()|
+| L07                       | Jan 27 | Phylogeny (Distance-based methods)                                                            ||
+| L08                       | Jan 29 | Phylogeny (Character-based methods)                                                           ||
+| L09                       | Feb 3  | Genome assembly and mapping part 1 ||
+| L10                       | Feb 5  | Genome assembly and mapping part 2           ||
+| L11                       | Feb 10 | Foundations in Machine Learning: Neural Networks                                                          ||
+|                           | Feb 12 | Miterm Exam (No Lecture)                                    ||
 | Reading Week              | Feb 17 |                                                             ||
-|                           | Feb 19 |                                                             ||
-| L12                       | Feb 24 | Genome Annotation                                           |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882094/View)|
-| L13                       | Feb 26 |                                                             ||
+|                           | Feb 19 |                                                           ||
+| L12                       | Feb 24 | Machine Learning & AF methods                                         ||
+| L13                       | Feb 26 | Foundations in Deep Learning: Transformer Models                                                           ||
 | \*Assignment 2 due Feb 28 |
-| L14                       | Mar 3  | RNA-Sequencing & Gene Expression                            |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882095/View)|
-| L15                       | Mar 5  |                                                             ||
-| L16                       | Mar 10 |Proteomics and Mass Spectrometry                             |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882096/View)| 
-| L17                       | Mar 12 |                                                             ||
+| L14                       | Mar 3  | DNA Language Models                            ||
+| L15                       | Mar 5  | Genome Annotation part 1                                                          ||
+| L16                       | Mar 10 | Genome annotation part 2                             || 
+| L17                       | Mar 12 | Proteomics and Mass Spectrometry                                                          ||
 | \*Assignment 3 due Mar 15 |
-| L18                       | Mar 17 | RNA & protein structure prediction                          |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882097/View)|
-| L19                       | Mar 19 |                                                             ||
-| L20                       | Mar 24 | Single-cell genomics                                        |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882098/View)|
-| L21                       | Mar 26 |                                                             ||
-| L22                       | Mar 31 | Foundations in Deep Learning: Transformer Models            |[pdf]()|
-| L23                       | Apr 2  | DNA Language Models                                         |[pdf]()|
+| L18                       | Mar 17 | Protein Structure Prediction Alpha fold  ||
+| L19                       | Mar 19 | RNA analysis                                                                                   ||
+| L20                       | Mar 24 | Clustering                                        ||
+| L21                       | Mar 26 | RNA-Sequencing & Gene Expression                                                        ||
+| L22                       | Mar 31 | Single-cell genomics part 1             ||
+| L23                       | Apr 2  | Single-cell genomics part 2                                       ||
 | \*Assignment 4 due Apr 4  |
 
 
