--- a/_pages/CS482.md
+++ b/_pages/CS482.md
@@ -46,6 +46,7 @@ The main aims of the class are for each student to:
 - An Introduction to Applied Bioinformatics (IAB) by J Gregory Caporaso. This is a free, interactive ebook, available at: [link](http://readiab.org.)
 - Nature Computational Biology compendium which collected a series of tutorials about classic computational biology-related topics, is available at: [link](https://www.nature.com/collections/tmdlscdqmc)
 - Bioinformatics Algorithms: An Active Learning Approach (3rd Edition) (2018) by Phillip Compeau and Pavel Pevzner
+- Richard Durbin, Sanger Centre, Cambridge, Sean R. Eddy, Washington University, Missouri, Anders Krogh, Technical University of Denmark, Lyngby, Graeme Mitchison
   
 
 **Grading Scheme:** Programming Assignment: 50% (12.5% x 4), Midterm Evaluation: 20%, Final exam: 30%.  
@@ -72,7 +73,7 @@ This is a **tentative** class schedule and may be adjusted as the term progresse
 | L05                       | Jan 20 | Probabilistic interpretarion of score/ Introduction to AF methods      ||
 | L06                       | Jan 22 | Multiple Sequence alignment/Phylogeny                                                   |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882091/View) (Jan 24)|
 | \*[Assignment 1](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5883633/View) due Jan 24 |
-| L07                       | Jan 27 | Phylogeny (Distance-based methods)                                                            ||
+| L07                       | Jan 27 | Phylogeny (Distance-based methods)                                                            |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5900436/View)|
 | L08                       | Jan 29 | Phylogeny (Character-based methods)                                                           ||
 | L09                       | Feb 3  | Genome assembly and mapping part 1 ||
 | L10                       | Feb 5  | Genome assembly and mapping part 2           ||
