Project guidelines and Scribing Assignment

--- a/_pages/CS482.md
+++ b/_pages/CS482.md
@@ -49,9 +49,21 @@ The main aims of the class are for each student to:
 - Richard Durbin, Sanger Centre, Cambridge, Sean R. Eddy, Washington University, Missouri, Anders Krogh, Technical University of Denmark, Lyngby, Graeme Mitchison
   
 
-**Grading Scheme:** Programming Assignment: 50% (12.5% x 4), Midterm Evaluation: 20%, Final exam: 30%.  
+**Grading Scheme:** Programming Assignment: 50% (12.5% x 4), Midterm Evaluation: 20%, Final exam: 30%. 
+
+**Grading Scheme (Graduate version):** Programming Assignment: 30% (7.5% x 4), Midterm Evaluation: 10%, Final exam: 30%, Project	25%. See [project guidelines]()  
 
 **Programming Assignments:** The students are expected to complete the assignments on their own. For each assignment, the source code and the assignment report will be reviewed and graded by the TA. The source code should be readable, runnable, and pass the tests. The project report should be detailed enough for the TA to run the code and expected to have the following sections: introduction, implementation details, results, and discussion.**The students are expected to program in Python for programming assignments**.
+
+**Scribing assignment:** As part of the course, students will have the opportunity to contribute to accessibility services by scribing lecture notes. Students may sign up for scribing assignments using the provided link.  
+
+Each completed scribing assignment will contribute towards the final exam grade as follows:  
+- **Single-lecture topics**: Up to **2.5%** of the final exam grade  
+- **Two-lecture topics**: Up to **5%** of the final exam grade  
+
+  The exact percentage awarded will depend on the overall quality of the submitted lecture notes.   
+- For topics that are still to be covered, the notes must be submitted **no later than one week before the final lecture on that topic**.  
+- For topics that have already been covered, the notes must be submitted **at least one week before the midterm examination**.  
 	
 **Late Policy:** There is some flexibility in the submission of assignments. Each student is allotted a maximum of 72 extra hours throughout the term to submit the assignments.  No justification is required for a late submission. However,  no submissions will be accepted after 72 hours. After your total time of 72 hours is consumed, the penalty will be 5% per hour late.   
 
