Project guidelines and Scribing Assignment fix

--- a/_pages/CS482.md
+++ b/_pages/CS482.md
@@ -51,7 +51,7 @@ The main aims of the class are for each student to:
 
 **Grading Scheme:** Programming Assignment: 50% (12.5% x 4), Midterm Evaluation: 20%, Final exam: 30%. 
 
-**Grading Scheme (Graduate version):** Programming Assignment: 30% (7.5% x 4), Midterm Evaluation: 10%, Final exam: 30%, Project	25%. See [project guidelines]()  
+**Grading Scheme (Graduate version):** Programming Assignment: 30% (7.5% x 4), Midterm Evaluation: 10%, Final exam: 30%, Project	25%. See [project guidelines](https://millanp95.github.io/cs482/project_guidelines)  
 
 **Programming Assignments:** The students are expected to complete the assignments on their own. For each assignment, the source code and the assignment report will be reviewed and graded by the TA. The source code should be readable, runnable, and pass the tests. The project report should be detailed enough for the TA to run the code and expected to have the following sections: introduction, implementation details, results, and discussion.**The students are expected to program in Python for programming assignments**.
 
@@ -85,7 +85,7 @@ This is a **tentative** class schedule and may be adjusted as the term progresse
 | L05                       | Jan 20 | Probabilistic interpretarion of score/ Introduction to AF methods      ||
 | L06                       | Jan 22 | Multiple Sequence alignment/Phylogeny                                                   |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5882091/View) (Jan 24)|
 | \*[Assignment 1](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5883633/View) due Jan 24 |
-| L07                       | Jan 27 | Phylogeny (Distance-based methods)                                                            |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5900436/View)|
+| L07                       | Jan 27 | Phylogeny (Distance-based methods)                                                            |[pdf](https://learn.uwaterloo.ca/d2l/le/content/1097892/viewContent/5902648/View)|
 | L08                       | Jan 29 | Phylogeny (Character-based methods)                                                           ||
 | L09                       | Feb 3  | Genome assembly and mapping part 1 ||
 | L10                       | Feb 5  | Genome assembly and mapping part 2           ||
